[gd_scene load_steps=3 format=3 uid="uid://qd4jrfxmpwku"]

[ext_resource type="Theme" uid="uid://djkietrpesysc" path="res://UI/overworld_menu_theme.tres" id="1_q6x1i"]
[ext_resource type="Script" uid="uid://bvy5wcgbpcm3x" path="res://Scripts/options_menu.gd" id="1_xf62s"]

[node name="OptionsMenu" type="Control" node_paths=PackedStringArray("music_slider", "sfx_slider")]
custom_minimum_size = Vector2(260, 140)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -130.0
offset_top = -70.0
offset_right = 160.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_q6x1i")
script = ExtResource("1_xf62s")
music_slider = NodePath("PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Label/HSlider")
sfx_slider = NodePath("PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2/Label/HSlider")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = -65.0
offset_top = -48.0
offset_right = 286.0
offset_bottom = 157.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="Control" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 0
offset_left = 39.0
offset_top = 30.0
offset_right = 233.0
offset_bottom = 162.0
text = "Options
"

[node name="HBoxContainer" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer"]
anchors_preset = 0
offset_top = 53.0
offset_right = 62.0
offset_bottom = 76.0

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 0
offset_left = 42.0
offset_top = 13.0
offset_right = 127.0
offset_bottom = 36.0
text = "Music"

[node name="HSlider" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Label"]
layout_mode = 0
offset_left = 2.0
offset_top = 20.0
offset_right = 237.0
offset_bottom = 41.0

[node name="HBoxContainer2" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer"]
anchors_preset = 0
offset_top = 80.0
offset_right = 105.0
offset_bottom = 103.0

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 0
offset_left = 41.0
offset_top = 38.0
offset_right = 262.0
offset_bottom = 61.0
text = "Sound Effects"

[node name="HSlider" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2/Label"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 2.0
offset_top = 23.0
offset_right = 10.0
offset_bottom = 41.0
grow_horizontal = 2

[connection signal="value_changed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Label/HSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2/Label/HSlider" to="." method="_on_sfx_slider_value_changed"]
